FIXED COLLUM SPACING w/ moved button + extra columns

--- a/Sign-up Form/stylesheetSignUp.css
+++ b/Sign-up Form/stylesheetSignUp.css
@@ -73,7 +73,7 @@ h1, h2, h3{
 
 form {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto auto;
   grid-column: 20px;
 }
 
@@ -88,7 +88,7 @@ form {
 }
 
 input[type=text] {
-  width: 50%;
+  width: 80%;
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
